--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1856,11 +1856,12 @@ abbr[title] {
     text-transform: uppercase
 }
 
-blockquote {
-    padding: 10px 20px;
-    margin: 0 0 20px;
-    font-size: 17.5px;
-    border-left: 5px solid #eee
+blockquote p {
+    padding: 20px 0px 0px 0px;
+    margin: 0px;
+    font-size: 18px;
+    border: none;
+    font-style: italic;
 }
 
 blockquote ol:last-child,
